SSMC figure updates

--- a/Drained_Strain_Controlled/1_linear_elastic/1_linear_test_setup.ipynb
+++ b/Drained_Strain_Controlled/1_linear_elastic/1_linear_test_setup.ipynb
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "# Set the stress and state parameters\n",
-    "stress = [-10, -10, -10, 0, 0, 0]\n",
+    "stress = [-100, -100, -100, 0, 0, 0]\n",
     "state_params = {\"cohesion\": initial_cohesion,\n",
     "                \"fric angle\": initial_fric_angle * np.pi/180,\n",
     "                \"dilatancy angle\": 0,\n",
@@ -194,10 +194,10 @@
    "outputs": [],
    "source": [
     "# Generate a figure to plot the MCSS models\n",
-    "fig, axs = plt.subplots(nrows = 2, ncols = 2, figsize = (8, 8))\n",
+    "fig, axs = plt.subplots(nrows = 2, ncols = 2, figsize = (8, 8), dpi = 300)\n",
     "\n",
     "colors = [\"blue\", \"red\"]\n",
-    "labels = [\"Ortiz-Simo\", \"Newton-Raphson\"]\n",
+    "labels = [\"Ortiz-Simo\", \"Sloan-Abbo\"]\n",
     "styles = [\"dashed\", \"solid\"]\n",
     "line_widths = [4, 1.75]\n",
     "\n",
@@ -206,14 +206,24 @@
     "                                  color = color , label=label, legend = True, linestyle = style, linewidth = linewidth)\n",
     "    \n",
     "plt.show()\n",
-    "fig.savefig(\"Drained_Strain_Control_linear_elastic.png\", format = \"png\", bbox_inches = 'tight')\n",
+    "image_name = \"Drained_Strain_Control_linear_elastic.pdf\"\n",
+    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/3_Constitutive_Modelling/mcss_images\"\n",
+    "save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
+    "fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
     "plt.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Virginia_Tech_Research",
+   "display_name": "VT_Research",
    "language": "python",
    "name": "python3"
   },
