--- a/Drained_Strain_Controlled/2_perf_plastic/perf_plastic.ipynb
+++ b/Drained_Strain_Controlled/2_perf_plastic/perf_plastic.ipynb
@@ -36,7 +36,9 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import time\n",
-    "import re\n"
+    "import re\n",
+    "from scipy.interpolate import interp1d\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -414,6 +416,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Something is going wrong with IncrementalDriver at the start of the model. \n",
+    "# I'm ignoring those values from the error calculation becasuse I'm testing the plastic part anyway\n",
+    "val = 10\n",
+    "\n",
     "for model in OS_models:\n",
     "    model.results.store_all()\n",
     "\n",
@@ -558,8 +564,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.interpolate import interp1d\n",
-    "import pandas as pd\n",
     "\n",
     "OS_max_abs_errors = {\n",
     "    \"stress_error\": [],\n",
@@ -589,9 +593,9 @@
     "        new_y = interp_func(new_x)\n",
     "        strain_df_interp[col] = new_y\n",
     "    \n",
-    "    OS_max_abs_errors[\"stress_error\"].append(calc_error(stress_df_interp, correct_model.results.stress_df, \"max_abs\"))\n",
+    "    OS_max_abs_errors[\"stress_error\"].append(calc_error(stress_df_interp[val:], correct_model.results.stress_df[val:], \"max_abs\"))\n",
     "    \n",
-    "    OS_max_abs_errors[\"strain_error\"].append(calc_error(strain_df_interp, correct_model.results.strain_df, \"max_abs\"))\n",
+    "    OS_max_abs_errors[\"strain_error\"].append(calc_error(strain_df_interp[val:], correct_model.results.strain_df[val:], \"max_abs\"))\n",
     "    "
    ]
   },
@@ -630,9 +634,9 @@
     "        new_y = interp_func(new_x)\n",
     "        strain_df_interp[col] = new_y\n",
     "    \n",
-    "    Sub_max_abs_errors[\"stress_error\"].append(calc_error(stress_df_interp, correct_model.results.stress_df, \"max_abs\"))\n",
+    "    Sub_max_abs_errors[\"stress_error\"].append(calc_error(stress_df_interp[val:], correct_model.results.stress_df[val:], \"max_abs\"))\n",
     "    \n",
-    "    Sub_max_abs_errors[\"strain_error\"].append(calc_error(strain_df_interp, correct_model.results.strain_df, \"max_abs\"))\n",
+    "    Sub_max_abs_errors[\"strain_error\"].append(calc_error(strain_df_interp[val:], correct_model.results.strain_df[val:], \"max_abs\"))\n",
     "    "
    ]
   },
@@ -668,16 +672,22 @@
     "\n",
     "# Format the first plot\n",
     "axs[0].set_xlabel(\"Average Compute Time [s]\")\n",
-    "axs[0].set_ylabel(\" Max Abs  Error [kPa]\")\n",
+    "axs[0].set_ylabel(\" Max Abs. Error [kPa]\")\n",
     "axs[0].set_title(\"Stress Tensor Error\")\n",
+    "axs[0].legend()\n",
     "\n",
     "# Format the second plot\n",
     "axs[1].set_title(\"Strain Tensor Error\")\n",
     "axs[1].set_xlabel(\"Average Compute Time [s]\")\n",
     "# axs[1].set_ylabel(\"Max Abs Strain Error [-]\")\n",
     "\n",
+    "\n",
+    "image_name = \"Drained_Strain_Control_perf_plastic_tensor_error.pdf\"\n",
+    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images/perf_plastic\"\n",
+    "save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
+    "fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
+    "\n",
     "plt.tight_layout()\n",
-    "axs[0].legend()\n",
     "plt.show()"
    ]
   },
@@ -742,10 +752,10 @@
     "axs[3].set_title(\"$\\\\epsilon_{q}$ Error\")\n",
     "axs[3].set_xlabel(\"$\\\\epsilon_{a}$ (-)\")\n",
     "\n",
-    "image_name = \"Drained_Strain_Control_perf_plastic_OS_strain_error.pdf\"\n",
-    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images\"\n",
-    "save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
-    "fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
+    "# image_name = \"Drained_Strain_Control_perf_plastic_OS_strain_error.pdf\"\n",
+    "# mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images\"\n",
+    "# save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
+    "# fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -793,10 +803,10 @@
     "axs[2].set_xlabel(\"$\\\\epsilon_{a}$ (-)\")\n",
     "axs[0].set_ylabel(\"Absolute Error\")\n",
     "\n",
-    "image_name = \"Drained_Strain_Control_perf_plastic_substepping_error.pdf\"\n",
-    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images\"\n",
-    "save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
-    "fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
+    "# image_name = \"Drained_Strain_Control_perf_plastic_substepping_error.pdf\"\n",
+    "# mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images/perf_plastic\"\n",
+    "# save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
+    "# fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -811,7 +821,7 @@
     "\n",
     "fig, axs = plt.subplots(nrows = 1, ncols = 4, figsize = (15, 5), dpi = 300)\n",
     "\n",
-    "error_names = [\"q_error\", \"p_error\", \"eps_v_error\", \"eps_q_error\"]\n",
+    "error_names = [\"p_error\",\"q_error\", \"eps_v_error\", \"eps_q_error\"]\n",
     "\n",
     "for i, model in enumerate(OS_models):\n",
     "            # Get the model name\n",
@@ -826,7 +836,7 @@
     "        error = OS_errors[error_name][i]\n",
     " \n",
     "        # Plot the error versus the strain\n",
-    "        fig.axes[j].plot(correct_model_strain, error, label = name, color = colors[i])\n",
+    "        fig.axes[j].plot(correct_model_strain[val:], error[val:], label = name, color = colors[i])\n",
     "        \n",
     "        if j ==0:\n",
     "           fig.axes[j].legend()\n",
@@ -844,20 +854,20 @@
     "        error = Sub_errors[error_name][i]\n",
     "        \n",
     "        # Plot the error versus the strain\n",
-    "        fig.axes[j].plot(correct_model_strain, error, label = name, color = colors[i], linestyle = \"dashed\")\n",
+    "        fig.axes[j].plot(correct_model_strain[val:], error[val:], label = name, \n",
+    "                         color = colors[i], linestyle = \"dashed\")\n",
     "\n",
     "        if j ==0:\n",
     "           fig.axes[j].legend()\n",
     "\n",
     "# Format the plot\n",
-    "fig.suptitle(\"Index Error vs Strain\")\n",
-    "axs[0].set_title(\"q Error\")\n",
+    "# fig.suptitle(\"Index Error vs Strain\")\n",
+    "axs[0].set_title(\"p error\")\n",
     "axs[0].set_xlabel(\"$\\\\epsilon_{a}$ (-)\")\n",
     "axs[0].set_ylabel(\"Absolute Error\")\n",
     "\n",
-    "axs[1].set_title(\"p Error\")\n",
+    "axs[1].set_title(\"q error\")\n",
     "axs[1].set_xlabel(\"$\\\\epsilon_{a}$ (-)\")\n",
-    "\n",
     "\n",
     "axs[2].set_title(\"$\\\\epsilon_{v}$ Error\")\n",
     "axs[2].set_xlabel(\"$\\\\epsilon_{a}$ (-)\")\n",
@@ -865,12 +875,12 @@
     "axs[3].set_title(\"$\\\\epsilon_{q}$ Error\")\n",
     "axs[3].set_xlabel(\"$\\\\epsilon_{a}$ (-)\")\n",
     "\n",
+    "plt.tight_layout()\n",
     "image_name = \"Drained_Strain_Control_perf_plastic_index_error.pdf\"\n",
-    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images\"\n",
+    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images/perf_plastic\"\n",
     "save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
     "fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
     "\n",
-    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -884,9 +894,7 @@
     "\n",
     "fig, axs = plt.subplots(nrows=2, ncols=2, figsize=(8, 8), dpi=300)\n",
     "\n",
-    "\n",
     "for i, model in enumerate(OS_models):\n",
-    "    \n",
     "    folder_name = os.path.basename(model.setup.folder_path)\n",
     "    num_iters = re.search(r'\\d+', folder_name).group()\n",
     "    \n",
@@ -905,15 +913,21 @@
     "                                  color=colors[i], label=name, legend=[True, False, False, False], linestyle='dashed', linewidth=2)\n",
     "    \n",
     "\n",
-    "\n",
     "image_name = \"Drained_Strain_Control_perf_plastic_quad.pdf\"\n",
-    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images\"\n",
+    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images/perf_plastic\"\n",
     "save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
     "fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
     "# plt.close()\n",
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
