--- a/Drained_Strain_Controlled/3_plastic_dilat/perf_dilatancy.ipynb
+++ b/Drained_Strain_Controlled/3_plastic_dilat/perf_dilatancy.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze Perfectly Plastic MC models\n",
+    "# Analyze Elasto-Plastic with Dilatancy MC models\n",
     "\n",
     "#### Author: Jonathan Moore\n",
     "\n",
     "#### Purpose:\n",
-    "The purpose of this notebook is to run the incremental driver models with elasto-perfectly plastic MC and then generate the associated plots.\n",
+    "The purpose of this notebook is to run the incremental driver models with elasto-plastic  MC with dilatancy and then generate the associated plots.\n",
     "Plots are:\n",
     "* Quad Plot\n",
     "* Error vs. Strain (Relative Error)\n",
@@ -34,11 +34,11 @@
     "import os\n",
     "import sys\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.interpolate import interp1d\n",
-    "import re\n",
+    "import numpy as np\n",
     "import time\n",
-    "import pandas as pd\n",
-    "import numpy as np\n"
+    "import re\n",
+    "from scipy.interpolate import interp1d\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -183,10 +183,10 @@
     "    \"peak cohesion\"          : initial_cohesion,\n",
     "    \"residual cohesion\"      : 0,\n",
     "    \"peak fric angle\"        : initial_fric_angle,\n",
-    "    \"residual fric angle\"    : 15,\n",
-    "    \"peak dilatancy\"         : 0, \n",
-    "    \"residual dilatancy\"     : 0,\n",
-    "    \"softening shape factor\" : 2.5,\n",
+    "    \"residual fric angle\"    : 0,\n",
+    "    \"peak dilatancy\"         : 15, \n",
+    "    \"residual dilatancy\"     : 15,\n",
+    "    \"softening shape factor\" : 0,\n",
     "    \"integration flag\"       : 0, # zero for substepping, 1 for Ortiz-Simo\n",
     "    \"Yield surface tolerance\": 1e-8,\n",
     "    \"num integration iters\"  : 1000,\n",
@@ -378,7 +378,7 @@
    "outputs": [],
    "source": [
     "# Calculate the average time for each model\n",
-    "OS_avg_time  = [None] * len(OS_models)\n",
+    "OS_avg_time = [None] * len(OS_models)\n",
     "Sub_avg_time = [None] * len(Sub_models)\n",
     "\n",
     "for i, model in enumerate(OS_models):\n",
@@ -416,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Something is wrong with the intial part of the elastic loading I'm not sure what's going on I'm going to remove those points\n",
+    "# Incremental Driver is doing something strange at the start of the calculations so I'm removing that from the error analysis\n",
     "val = 10\n",
     "\n",
     "for model in OS_models:\n",
@@ -681,12 +681,12 @@
     "# axs[1].set_ylabel(\"Max Abs Strain Error [-]\")\n",
     "\n",
     "\n",
-    "image_name = \"Drained_Strain_Control_plastic_soft_tensor_error.pdf\"\n",
-    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images/plastic_soft\"\n",
+    "image_name = \"Drained_Strain_Control_plastic_dilat_tensor_error.pdf\"\n",
+    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images/plastic_dilat\"\n",
     "save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
     "fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
+    "# plt.tight_layout()\n",
     "\n",
-    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -802,12 +802,11 @@
     "axs[2].set_xlabel(\"$\\\\epsilon_{a}$ (-)\")\n",
     "axs[0].set_ylabel(\"Absolute Error\")\n",
     "\n",
-    "image_name = \"Drained_Strain_Control_plastic_soft_substepping_error.pdf\"\n",
-    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images/plastic_soft\"\n",
-    "save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
-    "fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
-    "\n",
     "plt.tight_layout()\n",
+    "# image_name = \"Drained_Strain_Control_perf_plastic_substepping_error.pdf\"\n",
+    "# mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images/perf_plastic\"\n",
+    "# save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
+    "# fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
     "plt.show()"
    ]
   },
@@ -875,8 +874,8 @@
     "axs[3].set_xlabel(\"$\\\\epsilon_{a}$ (-)\")\n",
     "\n",
     "plt.tight_layout()\n",
-    "image_name = \"Drained_Strain_Control_plastic_soft_index_error.pdf\"\n",
-    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images/plastic_soft\"\n",
+    "image_name = \"Drained_Strain_Control_plastic_dilat_index_error.pdf\"\n",
+    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images/plastic_dilat\"\n",
     "save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
     "fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
     "\n",
@@ -912,8 +911,8 @@
     "                                  color=colors[i], label=name, legend=[True, False, False, False], linestyle='dashed', linewidth=2)\n",
     "    \n",
     "\n",
-    "image_name = \"Drained_Strain_Control_plastic_soft_quad.pdf\"\n",
-    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images/plastic_soft\"\n",
+    "image_name = \"Drained_Strain_Control_plastic_dilat_quad.pdf\"\n",
+    "mcss_latex_folder = \"/home/jmoore/Documents/Master_Thesis/chapters/Constitutive_Modelling/mcss_images/plastic_dilat\"\n",
     "save_fig_path = os.path.join(mcss_latex_folder, image_name)\n",
     "fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
     "# plt.close()\n",
