Final figure upload

--- a/Drained_Strain_Controlled/5_plastic_dilat_soft/plastic_dilat_soft.ipynb
+++ b/Drained_Strain_Controlled/5_plastic_dilat_soft/plastic_dilat_soft.ipynb
@@ -173,12 +173,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calc the Shear Modulus\n",
+    "\n",
+    "def calc_shear_modulus_E_nu(E, nu):\n",
+    "    \"\"\"\n",
+    "    Calc the shear modulus from the youngs modulus and poisson's ratio\n",
+    "    \"\"\"\n",
+    "\n",
+    "    return E/( 2 * (1 + nu) )\n",
+    "\n",
+    "shear_modulus = calc_shear_modulus_E_nu(2500, 0.2) \n",
+    "print(f\"Shear Modulus: {shear_modulus:0.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# This needs to be in the order that the parameters should be in\n",
     "\n",
     "initial_fric_angle = 25.375\n",
     "initial_cohesion = 0\n",
     "sub_properties = {\n",
-    "    \"Shear Modulus (kPa)\"    : 2500,\n",
+    "    \"Shear Modulus (kPa)\"    : shear_modulus,\n",
     "    \"poisson ratio\"          : 0.2,\n",
     "    \"peak cohesion\"          : initial_cohesion,\n",
     "    \"residual cohesion\"      : 0,\n",
@@ -705,6 +724,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the average time and max error to a file so that I can load it and plot it with the other models\n",
+    "\n",
+    "# Build a df\n",
+    "df = pd.DataFrame(data = {\"sloan_avg_time\"     : Sub_avg_time,\n",
+    "                          \"os_avg_time\"        : OS_avg_time,\n",
+    "                          \"sloan_stress_error\" : Sub_max_abs_errors[\"stress_error\"],\n",
+    "                          \"os_stress_error\"    : OS_max_abs_errors[\"stress_error\"],\n",
+    "                          \"sloan_strain_error\" : Sub_max_abs_errors[\"strain_error\"], \n",
+    "                          \"os_strain_error\"    : OS_max_abs_errors[\"strain_error\"]\n",
+    "                          })\n",
+    "spec_file = \"plastic_dilat_soft\"\n",
+    "name = f\"{spec_file}_avg_time_error.csv\"\n",
+    "# Save the df\n",
+    "df.to_csv(name, index= False)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -832,10 +873,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig, axs = plt.subplots(nrows = 1, ncols = 2, figsize = (12, 6))\n",
     "\n",
-    "fig, axs = plt.subplots(nrows = 1, ncols = 4, figsize = (15, 5), dpi = 300)\n",
-    "\n",
-    "error_names = [\"p_error\",\"q_error\", \"eps_v_error\", \"eps_q_error\"]\n",
+    "# error_names = [\"p_error\",\"q_error\", \"eps_v_error\", \"eps_q_error\"]\n",
+    "error_names = [\"p_error\", \"eps_q_error\"]\n",
     "\n",
     "for i, model in enumerate(OS_models):\n",
     "            # Get the model name\n",
@@ -876,18 +917,12 @@
     "\n",
     "# Format the plot\n",
     "# fig.suptitle(\"Index Error vs Strain\")\n",
-    "axs[0].set_title(\"p error\")\n",
+    "axs[0].set_title(\"$p$ Error\")\n",
     "axs[0].set_xlabel(\"$\\\\epsilon_{a}$ (-)\")\n",
     "axs[0].set_ylabel(\"Absolute Error\")\n",
     "\n",
-    "axs[1].set_title(\"q error\")\n",
+    "axs[1].set_title(\"$\\\\epsilon_{q}$ Error\")\n",
     "axs[1].set_xlabel(\"$\\\\epsilon_{a}$ (-)\")\n",
-    "\n",
-    "axs[2].set_title(\"$\\\\epsilon_{v}$ Error\")\n",
-    "axs[2].set_xlabel(\"$\\\\epsilon_{a}$ (-)\")\n",
-    "\n",
-    "axs[3].set_title(\"$\\\\epsilon_{q}$ Error\")\n",
-    "axs[3].set_xlabel(\"$\\\\epsilon_{a}$ (-)\")\n",
     "\n",
     "plt.tight_layout()\n",
     "image_name = \"Drained_Strain_Control_plastic_dilat_soft_index_error.pdf\"\n",
@@ -896,6 +931,30 @@
     "fig.savefig(save_fig_path, format = \"pdf\", bbox_inches = 'tight')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the dataframe\n",
+    "df = pd.DataFrame(data = {\"os_500_iters_p\"        : OS_errors[\"p_error\"][0],\n",
+    "                          \"os_1000_iters_p\"       : OS_errors[\"p_error\"][1],\n",
+    "                          \"os_5000_iters_p\"       : OS_errors[\"p_error\"][2],\n",
+    "                          \"os_500_iters_eps_q\"    : OS_errors[\"eps_q_error\"][0],\n",
+    "                          \"os_1000_iters_eps_q\"   : OS_errors[\"eps_q_error\"][1],\n",
+    "                          \"os_5000_iters_eps_q\"   : OS_errors[\"eps_q_error\"][2],\n",
+    "                          \"sloan_500_iters_p\"     : Sub_errors[\"p_error\"][0],\n",
+    "                          \"sloan_1000_iters_p\"    : Sub_errors[\"p_error\"][1], \n",
+    "                          \"sloan_5000_iters_p\"    : Sub_errors[\"p_error\"][2],\n",
+    "                          \"sloan_500_iters_eps_q\" : Sub_errors[\"eps_q_error\"][0],\n",
+    "                          \"sloan_1000_iters_eps_q\": Sub_errors[\"eps_q_error\"][1], \n",
+    "                          \"sloan_5000_iters_eps_q\": Sub_errors[\"eps_q_error\"][2],\n",
+    "                         })\n",
+    "\n",
+    "df.to_csv(\"plastic_dilat_axial_strain_error.csv\", index = False)\n"
    ]
   },
   {
